--- a/src/templates/partials/components/_breadcrumbs.html
+++ b/src/templates/partials/components/_breadcrumbs.html
@@ -3,7 +3,7 @@
 	{% for item in breadcrumbs %}
 		{% if loop.last %}
 			<li class="is-active">
-				<a href="#" class="is-active">{{item}}</a>
+				<span>{{item}}</span>
 			</li>
 		{% else %}
 			<li>
