--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -47,6 +47,7 @@
 					+sm
 						display: none
 		&.is-active
+			color: $blue
 			+sm
 				display: block
 			&:before
@@ -56,7 +57,6 @@
 		color: inherit
 		transition: color 0.15s ease-in-out
 		+hover
-			color: $blue-light
-			// text-decoration: underline
+			color: $blue
 		&.is-active
 			color: $blue
