updated icon path in fields.sass

--- a/src/sass/form/_fields.sass
+++ b/src/sass/form/_fields.sass
@@ -295,10 +295,10 @@
 				transform-origin: center center
 				transition: opacity 0.25s ease, transform 0.25s ease
 			&:before
-				background-image: url(../img/down-default.svg)
+				background-image: url(../../img/down-default.svg)
 			&:after
 				opacity: 0
-				background-image: url(../img/down-active.svg)
+				background-image: url(../../img/down-active.svg)
 
 
 .select2-dropdown
