--- a/src/templates/data/sidebars/catalog.html
+++ b/src/templates/data/sidebars/catalog.html
@@ -1,10 +1,14 @@
 {% set category = [
 	{
 		title: 'Электроника, фото, связь',
+		active: 'is-active',
+		open: 'is-open',
 		list: [
 			{
 				link: 'Телефоны',
-				dropdown: true
+				dropdown: true,
+				active: 'is-active',
+				open: 'is-open'
 			},
 			{
 				link: 'Навигация'
