--- a/src/templates/catalog-product.html
+++ b/src/templates/catalog-product.html
@@ -88,7 +88,7 @@ breadcrumbsClass: 'page__breadcrumbs'
 					} %}
 					{% include "partials/components/_looking-for.html" %}
 
-					# {% set textBlockTitleClassList = 'text-center float-none' %} #
+					{% set textBlockTitleClassList = 'text-center float-none' %}
 					{% set blockText = {
 						title: 'Телевизоры',
 						content: [
