Task 206: Added typography

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,8 @@ title: Index page
 		'score-about',
 		'score-pay-and-delivery',
 		'score-contacts',
-		'score-reviews'
+		'score-reviews',
+		'article'
 	] %}
 
 	<ul style="max-width: 1080px; padding: 20px; margin: 0 auto; list-style: square outside">
